# learning-haskell

./: .gitignore  ghci.conf
cis-194/: cis194.cabal  ghci.sh
cis-194/src/: Lib.hs
cis-194/src/Hw1/: Hw1.hs
cis-194/src/Hw10/: AParser.hs
cis-194/src/Hw11/: SExpr.hs
cis-194/src/Hw12/: Risk.hs
cis-194/src/Hw2/: Hw2.hs  Log.hs
cis-194/src/Hw3/: Hw3.hs
cis-194/src/Hw4/: Hw4.hs
cis-194/src/Hw5/: Hw5.hs  Parser.hs  StackVM.hs
cis-194/src/Hw6/: Hw6.hs
cis-194/src/Hw7/: Buffer.hs  Editor.hs  JoinList.hs  JoinListBufEditor.hs  JoinListBuffer.hs  Scrabble.hs  Sized.hs  StringBufEditor.hs  StringBuffer.hs
cis-194/src/Hw8/: Employee.hs  Party.hs
nicta-course/: stack.yaml
nicta-course/src/Course/: Applicative.hs  Comonad.hs  Compose.hs  Extend.hs  FileIO.hs  Functor.hs  List.hs  ListZipper.hs  Monad.hs  MonadTutorial.hs  Optional.hs  State.hs  StateT.hs
nicta-course/test/: doctests.hs
real-world-haskell/: Chapter3.hs  ghci.cmd  realworldhaskell.cabal
real-world-haskell/src/: Chapter3.hs  Chapter4.hs  Lib.hs
