name:                realworldhaskell
version:             0.1.0.0
homepage:            http://github.com/stolyaroleh/learning-haskell
author:              Oleh Stolyar
maintainer:          stolyar.oleh@gmail.com
copyright:           Copyright: (c) 2015 Oleh Stolyar
category:            Personal Project
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010
